# TinyZero

./: .gitignore  NOTICE  README.md  pyproject.toml
examples/: eval_vizwiz.py  train_vizwiz.py  train_vizwiz_simple.py
examples/data_preprocess/: test_vizwiz.py  vizwiz.py  vizwiz_ppo_dataset.py
scripts/: train_vizwiz.sh  train_vizwiz_simple.sh
tinyzero/: __init__.py
verl/configs/: vizwiz_vqa.py
verl/trainer/config/: base_config.yaml  vizwiz_test.yaml  vizwiz_vqa.yaml
