# -------------------------------
# build-system
# -------------------------------
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -------------------------------
# project (PEP 621 metadata)
# -------------------------------
[tool.poetry]
name = "tinyzero"
version = "0.1.0"
description = "TinyZero: A lightweight framework for LLM training"
authors = [
    "Bytedance - Seed - MLSys <zhangchi.usc1992@bytedance.com>",
    "Bytedance - Seed - MLSys <gmsheng@connect.hku.hk>"
]
readme = "README.md"
packages = [
    {include = "tinyzero", from = "."}
]
include = [
    "version/*",
    "trainer/config/*.yaml"
]
license = "Apache-2.0"

# Dependencies corresponding to install_requires in setup.py
[tool.poetry.dependencies]
python = "^3.9"
torch = "2.4.0"
torchvision = "0.19.0"
accelerate = "*"
codetiming = "*"
datasets = "*"
dill = "*"
hydra-core = "*"
numpy = "*"
pandas = "*"
pybind11 = "*"
ray = "*"
tensordict = "<0.6"
transformers = "<4.48"
vllm = "<=0.6.3"
wandb = "*"

# Optional dependencies (extras_require in setup.py)
tensorboard = "^2.18.0"
[tool.poetry.group.dev.dependencies]
pytest = "*"
yapf = "*"

# URLs
[tool.poetry.urls]
Homepage = "https://github.com/volcengine/verl"